--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://tuxzx.github.io/drunkcat-site/'
+baseURL = 'https://blog.drunkcat.ink/'
 languageCode = 'en-us'
 title = 'drunkcat'
 theme = 'hugo-ink'
